[package]
name = "yeter"
version = "0.2.0"
edition = "2021"
description = "KISS incremental computation framework"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basic"
path = "examples/basic.rs"

[[bin]]
name = "invalidation"
path = "examples/invalidation.rs"

[dependencies]
